# STAN

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py  stan.db-shm  stan.db-wal
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: post-edit-lint.json  post-edit-lint.sh
.github/instructions/: api-routes.instructions.md  database.instructions.md
.github/prompts/: new-collector.prompt.md  new-route.prompt.md
.github/workflows/: ci.yml
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
stan/: __init__.py  config.py  scheduler.py
stan/api/: main.py  ws.py
stan/api/routes/: news.py  stocks.py  system.py
stan/collectors/: archive.py  impact.py  news.py  state.py  stocks.py
stan/database/: db.py  models.py
tests/: test_api.py  test_archive.py  test_collectors.py
